--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -25,17 +25,16 @@
   "scripts": {
     "webpack": "webpack --config resources/webpack.config.js",
     "analyze-bundle": "cross-env NODE_ENV=production CDN=1 ANALYZE=1 yarn webpack -p",
-    "build": "yarn build-clean && yarn build-cjs && yarn build-esm && yarn build-flow",
-    "build-cjs": "babel src --ignore '**/__tests__/**,**/__mocks__/**,*.spec.*' --out-dir dist/",
-    "build-esm": "cross-env ESM=1 babel src --ignore '**/__tests__/**,**/__mocks__/**,*.spec.*' --out-dir esm/",
+    "build": "yarn build-clean && yarn build-cjs && yarn build-esm",
+    "build-cjs": "tsc --project ./tsconfig.build.cjs.json",
+    "build-esm": "tsc --project ./tsconfig.build.esm.json",
     "build-clean": "rimraf esm dist webpack *.html",
     "build-bundles": "yarn build-bundles-clean && yarn build-bundles-dev && yarn build-bundles-min",
     "build-bundles-dev": "cross-env NODE_ENV=development CDN=1 yarn webpack -d --bail",
     "build-bundles-min": "cross-env ANALYZE=1 NODE_ENV=production CDN=1 yarn webpack -p --bail",
     "build-bundles-clean": "rimraf 'graphiql.*{js,css}' *.html",
-    "build-flow": "node ../../resources/buildFlow.js",
     "build-demo": "build-storybook -o ./storybook",
-    "check": "flow check",
+    "check": "tsc --project ./tsconfig.check.json",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config resources/webpack.config.js",
     "cypress-open": "yarn e2e-server 'cypress open'",
     "e2e": "yarn e2e-server 'cypress run'",
@@ -63,9 +62,9 @@
   "devDependencies": {
     "@storybook/addon-storyshots": "^5.2.8",
     "@storybook/react": "^5.2.8",
-    "babel-plugin-macros": "^2.8.0",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.4.0",
+    "babel-plugin-macros": "^2.8.0",
     "cross-env": "^6.0.3",
     "css-loader": "3.4.0",
     "cssnano": "^4.1.10",
@@ -90,6 +89,7 @@
     "serve": "^11.2.0",
     "start-server-and-test": "^1.10.6",
     "style-loader": "^1.0.0",
+    "ts-loader": "6.2.1",
     "webpack": "4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
